# rubik_cube_solver

./: CMakeLists.txt  main.cpp
PatternDatabases/: PermutationIndexer.h  math.cpp  math.h
model/:  RubiksCube1dArray.cpp  RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.h
solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
